--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "swagger-ui-express": "^5.0.1"
   },
   "devDependencies": {
-    "nodemon": "^3.1.9"
+    "nodemon": "^3.1.9",
+    "prettier": "3.5.3"
   }
 }
